--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,9 +283,10 @@ h6 {
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
+
   }
 
-  .navbar ul {
+  .navbar ul{
     display: none;
   }
 }
@@ -313,12 +314,13 @@ h6 {
   position: absolute;
   top: 55px;
   right: 15px;
-  bottom: 15px;
-  left: 15px;
-  padding: 10px 0;
   background-color: #fff;
   overflow-y: auto;
   transition: 0.3s;
+  border-radius: 15px;
+}
+.navbar-mobile ul li:target {
+  display: none;
 }
 
 .navbar-mobile a,
@@ -808,6 +810,78 @@ section {
 .services .icon-box:hover p {
   color: #fff;
 }
+
+
+/*--------------------------------------------------------------
+# Posts
+--------------------------------------------------------------*/
+.post{
+  padding: 40px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  background: #fff;
+  transition: all ease-in-out 0.3s;
+  /* height: 100%; */
+  margin-bottom: 40px;
+}
+.post-entry-1 {
+  margin-bottom: 30px;
+}
+
+.post-entry-1 img {
+  margin-bottom: 30px;
+}
+
+.post-entry-1 h2 {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  font-weight: 500;
+}
+
+.post-entry-1 h2 a {
+  color: var(--color-black);
+}
+
+.post-entry-1.lg h2 {
+  font-size: 40px;
+  line-height: 1;
+}
+
+.post-meta {
+  font-size: 11px;
+  letter-spacing: 0.07rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: var(--font-secondary);
+  color: rgba(var(--color-black-rgb), 0.4);
+  margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+  .custom-border {
+    border: none !important;
+  }
+}
+
+.author .photo {
+  margin-right: 10px;
+}
+
+.author .photo img {
+  width: 40px;
+  border-radius: 50%;
+  margin-bottom: 0;
+}
+
+.author .name h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+  font-family: var(--font-secondary);
+}
+
 
 /*--------------------------------------------------------------
 # Our Clients
