--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,17 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
 }
-
+section{
+  padding: 40px 30px;
+  margin-right: 20px;
+  margin-left: 20px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  background: #fff;
+  transition: all ease-in-out 0.3s;
+  /* height: 100%; */
+  margin-bottom: 40px;
+}
 a {
   color: #e96b56;
   text-decoration: none;
@@ -264,6 +274,18 @@ h6 {
   }
 }
 
+
+.navbar .navbar-extra a {
+  color: #fff;
+  margin: 0 0.5rem;
+}
+.navbar .navbar-extra a:hover {
+  color: var(--primary);
+}
+
+#hamburger-menu {
+  display: none;
+}
 /**
 * Mobile Navigation 
 */
@@ -677,11 +699,30 @@ section {
   color: #545454;
   line-height: 24px;
   font-size: 14px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
+}
+.featured .donasi a {
+  /* line-height: 20px; */
+  border-radius: 20px;
+  background-color: #18d26e;
+  padding: 10px 10px;
+  display: inline;
+  /* gap: 2px; */
+  color: white;
+}
+.featured .donasi:hover a {
+  /* line-height: 20px; */
+  border-radius: 20px;
+  background-color: white;
+  padding: 10px 10px;
+  display: inline;
+  /* gap: 2px; */
+  color: black;
 }
 
 .featured .icon-box:hover {
-  background: #e96b56;
+  padding-top: 10px;
+  background: #18d26e;
 }
 
 .featured .icon-box:hover i,
@@ -695,6 +736,8 @@ section {
 --------------------------------------------------------------*/
 .about{
   padding: 40px 30px;
+  margin-right: 20px;
+  margin-left: 20px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   background: #fff;
@@ -707,7 +750,17 @@ section {
   font-size: 26px;
   color: #545454;
 }
-
+.about .content span {
+  font-weight: 600;
+  font-size: 26px;
+  color: #111;
+}
+.about .content a {
+  /* font-weight: 600; */
+  /* font-size: 26px; */
+  text-decoration: underline;
+  color: #111;
+}
 .about .content ul {
   list-style: none;
   padding: 0;
