--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -743,6 +743,7 @@ section {
   background: #fff;
   transition: all ease-in-out 0.3s;
   /* height: 100%; */
+  margin-top: 100px;
   margin-bottom: 40px;
 }
 .about .content h3 {
@@ -779,7 +780,6 @@ section {
 .about .content p:last-child {
   margin-bottom: 0;
 }
-
 /*--------------------------------------------------------------
 # Our Services
 --------------------------------------------------------------*/
