--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1500,15 +1500,15 @@ section {
 }
 
 .team .member img {
-  max-width: 60%;
-  border-radius: 50%;
+  max-width: 100%;
+  /* border-radius: 5; */
   margin: 0 0 30px 0;
 }
 
-.team .member h4 {
+.team .member h3 {
   font-weight: 700;
   margin-bottom: 2px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .team .member span {
@@ -1526,6 +1526,7 @@ section {
 
 .team .member .social {
   margin-top: 15px;
+  gap: 1;
 }
 
 .team .member .social a {
