--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1479,6 +1479,74 @@ section {
   }
 }
 
+ /* ------------------------------------------------------------
+# donasi
+--------------------------------
+*/
+.donasi{
+  padding: 40px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  background: #fff;
+  transition: all ease-in-out 0.3s;
+  /* height: 100%; */
+  margin-bottom: 40px;
+}
+
+.donasi .member {
+  text-align: center;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+  padding: 30px 20px;
+  background: #fff;
+}
+
+.donasi .member img {
+  max-width: 100%;
+  /* border-radius: 5; */
+  margin: 0 0 30px 0;
+}
+
+.donasi .member h3 {
+  font-weight: 700;
+  margin-bottom: 2px;
+  font-size: 20px;
+}
+
+.donasi .member span {
+  font-style: italic;
+  display: block;
+  font-size: 13px;
+}
+
+.donasi .member p {
+  padding-top: 10px;
+  font-size: 14px;
+  font-style: italic;
+  /* color: #aaaaaa; */
+  color: #545454;
+
+}
+
+.donasi .member .social {
+  margin-top: 15px;
+  gap: 1;
+}
+
+.donasi .member .social a {
+  color: #919191;
+  transition: 0.3s;
+}
+
+.donasi .member .social a:hover {
+  color: #e96b56;
+}
+
+.donasi .member .social i {
+  font-size: 18px;
+  margin: 0 2px;
+}
+
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
@@ -1491,6 +1559,7 @@ section {
   /* height: 100%; */
   margin-bottom: 40px;
 }
+
 .team .member {
   text-align: center;
   margin-bottom: 20px;
@@ -1526,7 +1595,7 @@ section {
 
 .team .member .social {
   margin-top: 15px;
-  gap: 1;
+  gap: 2;
 }
 
 .team .member .social a {
