--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1509,6 +1509,79 @@ section {
   margin: 0 2px;
 }
 
+
+
+ /* ------------------------------------------------------------
+# blog
+--------------------------------
+*/
+.blog{
+  padding: 40px 30px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  background: #fff;
+  transition: all ease-in-out 0.3s;
+  /* height: 100%; */
+  margin-bottom: 40px;
+}
+
+.blog .member {
+  text-align: center;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+  padding: 30px 20px;
+  background: #fff;
+}
+
+.blog .member a {
+  color: #545454;
+  transition: 0.3s;
+}
+.blog .member img {
+  max-width: 100%;
+  /* border-radius: 5; */
+  margin: 0 0 30px 0;
+}
+
+.blog .member  h3 {
+  font-weight: 700;
+  margin-bottom: 2px;
+  font-size: 20px;
+}
+
+.blog .member span {
+  font-style: italic;
+  display: block;
+  font-size: 13px;
+}
+
+.blog .member p {
+  padding-top: 10px;
+  font-size: 14px;
+  font-style: italic;
+  /* color: #aaaaaa; */
+  color: #545454;
+
+}
+
+.blog .member .social {
+  margin-top: 15px;
+  gap: 50px;
+}
+
+.blog .member .social a {
+  color: #919191;
+  transition: 0.3s;
+}
+
+.blog .member .social a:hover {
+  color: #e96b56;
+}
+
+.blog .member .social i {
+  font-size: 18px;
+  margin: 0 2px;
+}
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
